# AFQ-Browser

./: .doctr-files  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  anatomy.html  api.html  binder_integration.html  dataformat.html  genindex.html  getting_help.html  github_deploy_key.enc  github_deploy_key_yeatmanlab_afq_browser.enc  headings.html  index.html  installation_guide.html  long_term_preservation.html  main.js  objects.inv  package.json  plots.html  requirements-dev.txt  requirements.md  requirements.txt  save-settings.html  search.html  searchindex.js  server.js  setup.cfg  setup.py  table.html  usage_guide.html
.github/workflows/: docs.yml  publish-to-test-pypi.yml  test.yml
AFQ-pieces/FA-plots/: README.md  index.html
AFQ-pieces/sortable-table/: README.md  index.html  style.css
AFQ-pieces/tract-select/: README.md
_sources/: dataformat.rst.txt  index.rst.txt  installation_guide.rst.txt  long_term_preservation.rst.txt  usage_guide.rst.txt
_sources/gen_api/: afqbrowser.assemble.rst.txt  afqbrowser.mat2tables.rst.txt  afqbrowser.run.rst.txt  afqbrowser.upload.rst.txt
afq-viz/: server.js
afq-viz/client/: index.html
afq-viz/js/: ConvexGeometry.js  threex.domevent.js
afqbrowser/: __init__.py  browser.py  gh_pages.py  github.py  version.py
afqbrowser/site/: package.json  server.js
afqbrowser/tests/: test_browser.py
client/: dat-gui-afq.css  index.html  style.css
client/css/: dat-gui-afq.css  style.css
client/data/: data.csv  data.py  (+3 more)
css/: style.css
data/: dtypes.json  subjects.json
doc/: anatomy.rst  api.rst  binder_integration.rst  conf.py  dataformat.rst  getting_help.rst  headings.rst  index.rst  installation_guide.rst  plots.rst  save-settings.rst  table.rst  tract-details.rst  usage_guide.rst
docs/: Makefile  binder_integration.rst  conf.py  getting_help.rst  index.rst  plots.rst  read-fibers-convex-hull.ipynb  save-settings.rst  usage_guide.rst
examples/: example_als_scikit_learn.ipynb
gen_api/: afqbrowser.assemble.html  afqbrowser.mat2tables.html  afqbrowser.run.html  afqbrowser.upload.html
js/: 3d-brain.js  ConvexGeometry.js  OBJLoader.js  threex.domevent.js  tract-details.js
(+271 files in other folders)
