[metadata]
name = AFQ-Browser
url = https://yeatmanlab.github.io/AFQ-Browser
download_url = https://github.com/yeatmanlab/AFQ-Browser
author = AFQ-Browser
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description =
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.7
install_requires =
    numpy>=1.16.5
    pandas
    scipy
    PyGithub>=1.32
    GitPython
    pip-conflict-checker==0.6.*

zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    flake8
    pytest==4.6
    coverage
    pytest-cov
