[metadata]
name = AFQ-Browser
url = https://yeatmanlab.github.io/AFQ-Browser
download_url = https://github.com/yeatmanlab/AFQ-Browser
author = AFQ-Browser
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description =
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.10
install_requires =
    numpy==2.1.0
    pandas==2.2.2
    scipy==1.14.0
    PyGithub>=1.32
    GitPython==3.1.43

zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    pytest==8.3.2
    coverage==7.6.1
    pytest-cov==5.0.0
    ruff==0.6.1
    pre-commit==3.8.0

all =
    %(dev)s